2023-08-16T16:09:41Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5881192919 # 1105
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-16
* notice: last 14d: unq all: 3 4141
* notice: prev accum: outdated-unq outdated-all / unq all: 1619 149122 / 1648 153428
* notice: next accum: outdated-unq outdated-all / unq all: 1619 149122 / 1648 153522
* notice: prev exec diff / last date diff / accum: unq all: +0 +94 -0 -92 / +2 +206 -0 -0 / 2 206
* notice: removed / changed dates: [] / [2023-08-02 2023-08-16]

2023-08-16T08:10:03Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5876280819 # 1104
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-16
* notice: last 14d: unq all: 3 4139
* notice: prev accum: outdated-unq outdated-all / unq all: 1619 149122 / 1646 153316
* notice: next accum: outdated-unq outdated-all / unq all: 1619 149122 / 1648 153428
* notice: prev exec diff / last date diff / accum: unq all: +2 +112 -1 -125 / +2 +112 -0 -0 / 2 112
* notice: removed / changed dates: [] / [2023-08-02 2023-08-16]

2023-08-16T00:34:51Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5873209850 # 1103
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-16
* notice: last 14d: unq all: 3 4152
* notice: prev accum: outdated-unq outdated-all / unq all: 1617 148824 / 1646 153220
* notice: next accum: outdated-unq outdated-all / unq all: 1619 149122 / 1646 153316
* notice: prev exec diff / last date diff / accum: unq all: +0 +96 -0 -42 / +3 +301 -0 -0 / 3 301
* notice: removed / changed dates: [2023-08-01] / [2023-08-02 2023-08-15]

2023-08-15T16:09:13Z: