@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2023-08-04T00:43:13Z",
-  "count" : 297,
+  "timestamp" : "2023-08-17T00:34:24Z",
+  "count" : 260,
   "count_minmax" : [ 112, 297 ],
-  "count_decinc" : [ -0, +297 ],
+  "count_decinc" : [ -37, +297 ],
   "uniques" : 2,
   "uniques_minmax" : [ 2, 2 ],
   "uniques_decinc" : [ -0, +2 ]
