@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2023-08-16T16:09:41Z",
-  "count" : 206,
-  "count_minmax" : [ 112, 206 ],
-  "count_decinc" : [ -0, +206 ],
+  "timestamp" : "2023-08-17T00:34:24Z",
+  "count" : 300,
+  "count_minmax" : [ 112, 300 ],
+  "count_decinc" : [ -0, +300 ],
   "uniques" : 2,
   "uniques_minmax" : [ 2, 2 ],
   "uniques_decinc" : [ -0, +2 ]
