@@ -1,24 +1,15 @@
 {
-  "timestamp" : "2023-08-16T16:09:41Z",
-  "count_outdated" : 149122,
-  "uniques_outdated" : 1619,
-  "count" : 153522,
+  "timestamp" : "2023-08-17T00:34:24Z",
+  "count_outdated" : 149421,
+  "uniques_outdated" : 1621,
+  "count" : 153616,
   "uniques" : 1648,
   "clones" : [
     {
-      "timestamp": "2023-08-02T00:00:00Z",
-      "count": 40,
-      "count_minmax": [ 40, 299 ],
-      "count_decinc": [ 259, 299 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 2 ],
-      "uniques_decinc": [ 1, 2 ]
-    },
-    {
       "timestamp": "2023-08-03T00:00:00Z",
-      "count": 297,
+      "count": 260,
       "count_minmax": [ 112, 297 ],
-      "count_decinc": [ 0, 297 ],
+      "count_decinc": [ 37, 297 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
@@ -133,9 +124,9 @@
     },
     {
       "timestamp": "2023-08-16T00:00:00Z",
-      "count": 206,
-      "count_minmax": [ 112, 206 ],
-      "count_decinc": [ 0, 206 ],
+      "count": 300,
+      "count_minmax": [ 112, 300 ],
+      "count_decinc": [ 0, 300 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
