@@ -1,15 +1,10 @@
 {
-  "count": 4141,
+  "count": 4158,
   "uniques": 3,
   "clones": [
     {
-      "timestamp": "2023-08-02T00:00:00Z",
-      "count": 40,
-      "uniques": 1
-    },
-    {
       "timestamp": "2023-08-03T00:00:00Z",
-      "count": 297,
+      "count": 260,
       "uniques": 2
     },
     {
@@ -74,7 +69,7 @@
     },
     {
       "timestamp": "2023-08-16T00:00:00Z",
-      "count": 206,
+      "count": 300,
       "uniques": 2
     }
   ]
